# 在此处完成python项目的配置以及依赖安装
[build-system]  # 指定构建系统与一些依赖
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"


[project]
name = "mtcnn-runtime" # 项目名称
version = "0.0.4" # 项目版本
dynamic = [ "dependencies", "optional-dependencies", "readme"] # 动态配置版本，依赖，可选依赖，readme
description = "Python library for streamlined tracking and management of AI training processes." # 项目描述
license = "Apache-2.0" # 项目许可证
requires-python = ">=3.8" # python版本要求，我们只维护python3.8以上版本
authors = [  # 项目作者
  { name = "Cunyue", email = "cunykang@gmail.com" },
]
keywords = [  # 项目关键词
    "machine learning",
]
classifiers = [  # 项目分类
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering',
]

[project.urls] # 项目链接
Homepage = "https://github.com/SAKURA-CAT/mtcnn-runtime"

[tool.hatch.build]
artifacts = [  # 将一些非python文件打包到项目中
  "/mtcnnruntime/weights/*",
]

[tool.hatch.metadata.hooks.requirements_txt] # 动态设置依赖
filename = "requirements.txt"

[tool.hatch.metadata.hooks.fancy-pypi-readme]  # 动态设置readme
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.build.targets.sdist]  # 在执行构建之前，将一些必要文件拷贝到虚拟环境中，以便构建，此时已经完成了vue的编译
include = [
  "/mtcnnruntime",
  "/requirements.txt",
  "/README.md",
  "/imgs"
]



# black配置，与构建无关
[tool.black]
line-length = 150
